--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -126,10 +126,10 @@
    "outputs": [],
    "source": [
     "# Read the applicants_data.csv file from the Resources folder into a Pandas DataFrame\n",
-    "applicant_data_df = # YOUR CODE HERE\n",
+    "applicant_data_df = pd.read_csv(\"../Resources/applicants_data.csv\")\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "applicant_data_df.head()\n"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "# Review the data types associated with the columns\n",
-    "# YOUR CODE HERE\n"
+    "applicant_data_df.dtypes()\n"
    ]
   },
   {
@@ -156,10 +156,10 @@
    "outputs": [],
    "source": [
     "# Drop the 'EIN' and 'NAME' columns from the DataFrame\n",
-    "applicant_data_df = # YOUR CODE HERE\n",
+    "applicant_data_df = applicant_data_df.drop([\"EIN\", \"NAME\"]).values\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "applicant_data_df.head()\n"
    ]
   },
   {
@@ -176,10 +176,10 @@
    "outputs": [],
    "source": [
     "# Create a list of categorical variables \n",
-    "categorical_variables = # YOUR CODE HERE\n",
+    "categorical_variables = list(applicant_data_df.dtypes[applicant_data_df.dtypes == \"object\"].index)\n",
     "\n",
     "# Display the categorical variables list\n",
-    "# YOUR CODE HERE\n"
+    "categorical_variables\n"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Create a OneHotEncoder instance\n",
-    "enc = # YOUR CODE HERE\n"
+    "enc = OneHotEncoder(sparse=False)\n"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "# Encode the categorcal variables using OneHotEncoder\n",
-    "encoded_data = # YOUR CODE HERE\n"
+    "encoded_data = enc.fit_transform(applicant_data_df[categorical_variables])\n"
    ]
   },
   {
@@ -209,10 +209,13 @@
    "outputs": [],
    "source": [
     "# Create a DataFrame with the encoded variables\n",
-    "encoded_df = # YOUR CODE HERE\n",
+    "encoded_df = pd.DataFrame(\n",
+    "    encoded_data,\n",
+    "    columns=enc.get_feature_names(categorical_variables)\n",
+    ")\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE\n"
+    "encoded_data \n"
    ]
   },
   {
@@ -814,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
