define number of inputs

--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -2034,12 +2034,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the the number of inputs (features) to the model\n",
-    "number_input_features = # YOUR CODE HERE\n",
+    "number_input_features = len(X_train.iloc[0])\n",
     "\n",
     "# Review the number of features\n",
     "number_input_features\n"
