--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -2063,17 +2063,28 @@
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons = # YOUR CODE HERE"
+    "number_output_neurons = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1 =  # YOUR CODE HERE\n",
+    "hidden_nodes_layer1 =  (number_input_features + 1) // 2 \n",
     "\n",
     "# Review the number hidden nodes in the first layer\n",
     "hidden_nodes_layer1\n"
@@ -2081,12 +2092,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the second hidden layer\n",
-    "hidden_nodes_layer2 =  # YOUR CODE HERE\n",
+    "hidden_nodes_layer2 =  (hidden_nodes_layer1 + 1) // 2\n",
     "\n",
     "# Review the number hidden nodes in the second layer\n",
     "hidden_nodes_layer2\n"
@@ -2094,52 +2116,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M2\n",
+      "\n",
+      "systemMemory: 16.00 GB\n",
+      "maxCacheSize: 5.33 GB\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-20 12:56:07.151439: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-03-20 12:56:07.152184: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn = # YOUR CODE HERE\n"
+    "nn = Sequential()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the first hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the second hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the output layer to the model specifying the number of output neurons and activation function\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=1, activation=\"sigmoid\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 58)                6786      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 29)                1711      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 30        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 8,527\n",
+      "Trainable params: 8,527\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the Sequential model summary\n",
-    "# YOUR CODE HERE\n"
+    "nn.summary()\n"
    ]
   },
   {
@@ -2151,22 +2215,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "# YOUR CODE HERE\n"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-20 12:57:17.990232: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n",
+      "2023-03-20 12:57:18.173389: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "804/804 [==============================] - 5s 5ms/step - loss: 0.5732 - accuracy: 0.7220\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5526 - accuracy: 0.7283\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5497 - accuracy: 0.7315\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5472 - accuracy: 0.7318\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5455 - accuracy: 0.7327\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5450 - accuracy: 0.7336\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5439 - accuracy: 0.7343\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5431 - accuracy: 0.7332\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5428 - accuracy: 0.7355\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5417 - accuracy: 0.7350\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5417 - accuracy: 0.7357\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5411 - accuracy: 0.7349\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5402 - accuracy: 0.7371\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5397 - accuracy: 0.7364\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5390 - accuracy: 0.7372\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5392 - accuracy: 0.7369\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5387 - accuracy: 0.7369\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5384 - accuracy: 0.7378\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5381 - accuracy: 0.7369\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5375 - accuracy: 0.7373\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5376 - accuracy: 0.7387\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5369 - accuracy: 0.7385\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5370 - accuracy: 0.7378\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5363 - accuracy: 0.7394\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5362 - accuracy: 0.7387\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5360 - accuracy: 0.7383\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5356 - accuracy: 0.7393\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5353 - accuracy: 0.7399\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5350 - accuracy: 0.7381\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5352 - accuracy: 0.7398\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5346 - accuracy: 0.7393\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5344 - accuracy: 0.7392\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5339 - accuracy: 0.7401\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5339 - accuracy: 0.7399\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5336 - accuracy: 0.7403\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5335 - accuracy: 0.7400\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5337 - accuracy: 0.7410\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5327 - accuracy: 0.7402\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5333 - accuracy: 0.7393\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5327 - accuracy: 0.7416\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5330 - accuracy: 0.7399\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5325 - accuracy: 0.7403\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5321 - accuracy: 0.7411\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5329 - accuracy: 0.7395\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5320 - accuracy: 0.7404\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5320 - accuracy: 0.7406\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5321 - accuracy: 0.7413\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5317 - accuracy: 0.7401\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5322 - accuracy: 0.7411\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5316 - accuracy: 0.7396\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model using 50 epochs and the training data\n",
-    "# YOUR CODE HERE\n"
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=50)\n"
    ]
   },
   {
@@ -2178,12 +2363,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-20 13:00:53.219702: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 1s - loss: 0.5576 - accuracy: 0.7297 - 850ms/epoch - 3ms/step\n",
+      "Loss: 0.5575812458992004, Accuracy: 0.72967928647995\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -2198,15 +2399,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the model's file path\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_path = file_path = Path(\"Resources/AlphabetSoup.h5\")\n",
     "\n",
     "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "nn.save(file_path)\n"
    ]
   },
   {
