--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -2447,9 +2447,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the the number of inputs (features) to the model\n",
     "number_input_features = len(X_train.iloc[0])\n",
@@ -2460,22 +2471,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons_A1 = # YOUR CODE HERE"
+    "number_output_neurons_A1 = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1_A1 = # YOUR CODE HERE\n",
+    "hidden_nodes_layer1_A1 = (number_input_features + 1) // 2 \n",
     "\n",
     "# Review the number of hidden nodes in the first layer\n",
     "hidden_nodes_layer1_A1"
@@ -2483,50 +2505,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the number of hidden nodes for the first hidden layer\n",
+    "hidden_nodes_layer2_A1 = (hidden_nodes_layer1_A1 + 1) // 2 \n",
+    "\n",
+    "# Review the number of hidden nodes in the first layer\n",
+    "hidden_nodes_layer2_A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the number of hidden nodes for the first hidden layer\n",
+    "hidden_nodes_layer3_A1 = (hidden_nodes_layer2_A1 + 1) // 2 \n",
+    "\n",
+    "# Review the number of hidden nodes in the first layer\n",
+    "hidden_nodes_layer3_A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn_A1 = # YOUR CODE HERE"
+    "nn_A1 = Sequential()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_15 (Dense)            (None, 58)                6786      \n",
+      "                                                                 \n",
+      " dense_16 (Dense)            (None, 29)                1711      \n",
+      "                                                                 \n",
+      " dense_17 (Dense)            (None, 15)                450       \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 1)                 16        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 8,963\n",
+      "Trainable params: 8,963\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# First hidden layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A1.add(Dense(units=hidden_nodes_layer1_A1, input_dim=number_input_features, activation=\"tanh\"))\n",
     "\n",
+    "# Second hidden layer\n",
+    "nn_A1.add(Dense(units=hidden_nodes_layer2_A1, input_dim=number_input_features, activation=\"tanh\"))\n",
+    "\n",
+    "#Third hidden layer\n",
+    "nn_A1.add(Dense(units=hidden_nodes_layer3_A1, input_dim=number_input_features, activation=\"tanh\"))\n",
     "\n",
     "# Output layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A1.add(Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "\n",
     "# Check the structure of the model\n",
-    "# YOUR CODE HERE"
+    "nn_A1.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "nn_A1.# YOUR CODE HERE\n"
+    "nn_A1.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5392 - accuracy: 0.7347\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5387 - accuracy: 0.7365\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5378 - accuracy: 0.7381\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5370 - accuracy: 0.7371\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5366 - accuracy: 0.7378\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5363 - accuracy: 0.7371\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5352 - accuracy: 0.7385\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5350 - accuracy: 0.7376\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5347 - accuracy: 0.7386\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5340 - accuracy: 0.7397\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5336 - accuracy: 0.7399\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5332 - accuracy: 0.7378\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5329 - accuracy: 0.7402\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5328 - accuracy: 0.7398\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5321 - accuracy: 0.7400\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5319 - accuracy: 0.7402\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5316 - accuracy: 0.7405\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5313 - accuracy: 0.7410\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5309 - accuracy: 0.7406\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5310 - accuracy: 0.7398\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5305 - accuracy: 0.7414\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5302 - accuracy: 0.7414\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5298 - accuracy: 0.7412\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5299 - accuracy: 0.7403\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5293 - accuracy: 0.7414\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5295 - accuracy: 0.7399\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5292 - accuracy: 0.7414\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5289 - accuracy: 0.7424\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5289 - accuracy: 0.7411\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5286 - accuracy: 0.7416\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5283 - accuracy: 0.7415\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5283 - accuracy: 0.7410\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5281 - accuracy: 0.7421\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5279 - accuracy: 0.7418\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5277 - accuracy: 0.7414\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5278 - accuracy: 0.7424\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5276 - accuracy: 0.7428\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 5s 6ms/step - loss: 0.5276 - accuracy: 0.7423\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5272 - accuracy: 0.7426\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5271 - accuracy: 0.7430\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5270 - accuracy: 0.7420\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5269 - accuracy: 0.7424\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5270 - accuracy: 0.7432\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5274 - accuracy: 0.7424\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5271 - accuracy: 0.7437\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5266 - accuracy: 0.7429\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5265 - accuracy: 0.7428\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5268 - accuracy: 0.7427\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 4s 6ms/step - loss: 0.5264 - accuracy: 0.7418\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 4s 5ms/step - loss: 0.5266 - accuracy: 0.7435\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model using 50 epochs and the training data\n",
-    "fit_model_A1 = # YOUR CODE HERE\n"
+    "fit_model_A1 = nn_A1.fit(X_train_scaled, y_train, epochs=50)\n"
    ]
   },
   {
@@ -2556,7 +2762,7 @@
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons_A2 = # YOUR CODE HERE"
+    "number_output_neurons_A2 = 1"
    ]
   },
   {
@@ -2566,7 +2772,7 @@
    "outputs": [],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1_A2 = # YOUR CODE HERE\n",
+    "hidden_nodes_layer1_A2 = (number_input_features + 1) // 2 \n",
     "\n",
     "# Review the number of hidden nodes in the first layer\n",
     "hidden_nodes_layer1_A2"
@@ -2578,8 +2784,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the number of hidden nodes for the first hidden layer\n",
+    "hidden_nodes_layer1_A2 = (hidden_nodes_layer1_A2 + 1) // 2 \n",
+    "\n",
+    "# Review the number of hidden nodes in the first layer\n",
+    "hidden_nodes_layer1_A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the number of hidden nodes for the first hidden layer\n",
+    "hidden_nodes_layer1_A3 = (hidden_nodes_layer1_A2 + 1) // 2 \n",
+    "\n",
+    "# Review the number of hidden nodes in the first layer\n",
+    "hidden_nodes_layer1_A3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create the Sequential model instance\n",
-    "nn_A2 = # YOUR CODE HERE"
+    "nn_A2 = Sequential()"
    ]
   },
   {
@@ -2589,13 +2821,20 @@
    "outputs": [],
    "source": [
     "# First hidden layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A2.add(Dense(units=hidden_nodes_layer1_A1, input_dim=number_input_features, activation=\"relu\"))\n",
+    "\n",
+    "# Second hidden layer\n",
+    "nn_A2.add(Dense(units=hidden_nodes_layer2_A1, input_dim=number_input_features, activation=\"relu\"))\n",
+    "\n",
+    "#Third hidden layer\n",
+    "nn_A2.add(Dense(units=hidden_nodes_layer3_A1, input_dim=number_input_features, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A2.add(Dense(units=1, activation=\"sigmoid\"))\n",
+    "\n",
     "\n",
     "# Check the structure of the model\n",
-    "# YOUR CODE HERE\n"
+    "nn_A2.summary()\n"
    ]
   },
   {
@@ -2605,7 +2844,7 @@
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "# YOUR CODE HERE\n"
+    "nn_A2.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
@@ -2615,7 +2854,7 @@
    "outputs": [],
    "source": [
     "# Fit the model\n",
-    "# YOUR CODE HERE\n"
+    "fit_model_A2 = nn_A2.fit(X_train_scaled, y_train, epochs=25)\n"
    ]
   },
   {
