remove verbose parameter from loss/accuracy

--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -3068,7 +3068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -3076,7 +3076,7 @@
      "output_type": "stream",
      "text": [
       "Original Model Results\n",
-      "268/268 - 1s - loss: 0.5576 - accuracy: 0.7297 - 715ms/epoch - 3ms/step\n",
+      "268/268 [==============================] - 1s 4ms/step - loss: 0.5576 - accuracy: 0.7297\n",
       "Loss: 0.5575812458992004, Accuracy: 0.72967928647995\n"
      ]
     }
@@ -3085,7 +3085,7 @@
     "print(\"Original Model Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -3093,28 +3093,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alternative Model 1 Results\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-20 13:35:56.797214: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "268/268 - 1s - loss: 0.5529 - accuracy: 0.7306 - 904ms/epoch - 3ms/step\n",
+      "Alternative Model 1 Results\n",
+      "268/268 [==============================] - 1s 4ms/step - loss: 0.5529 - accuracy: 0.7306\n",
       "Loss: 0.5529056191444397, Accuracy: 0.7306122183799744\n"
      ]
     }
@@ -3123,7 +3110,7 @@
     "print(\"Alternative Model 1 Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = nn_A1.evaluate(X_test_scaled,y_test,verbose=2)\n",
+    "model_loss, model_accuracy = nn_A1.evaluate(X_test_scaled,y_test)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -3131,28 +3118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alternative Model 2 Results\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-20 13:36:44.231563: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "268/268 - 1s - loss: 0.5634 - accuracy: 0.7286 - 900ms/epoch - 3ms/step\n",
+      "Alternative Model 2 Results\n",
+      "268/268 [==============================] - 1s 4ms/step - loss: 0.5634 - accuracy: 0.7286\n",
       "Loss: 0.5634122490882874, Accuracy: 0.7286297082901001\n"
      ]
     }
@@ -3161,7 +3135,7 @@
     "print(\"Alternative Model 2 Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = nn_A2.evaluate(X_test_scaled,y_test,verbose=2)\n",
+    "model_loss, model_accuracy = nn_A2.evaluate(X_test_scaled,y_test)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
